add travel info

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 				</div>
 				<div class="col-sm-4 photodiv">
 					<br/>
-					<p><a href="#"><img class="imgcell imagedropshadow" src="assets/img/williamssonoma.png"/></a></p>
+					<p><a href="#"><img class="imgcell imagedropshadow" src="assets/img/williamsonoma.png"/></a></p>
 				</div>
 				<div class="col-sm-4 photodiv">
 					<br/>
@@ -685,19 +685,19 @@
 				</div>
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-xs-3 righttext">Reagan National Airport</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-3 righttext">Ronald Reagan Washington National Airport</div>
+						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/zpz1bqjahhJ2">Google Maps</a></div>
+						<div class="col-xs-6 whitetext"><p>Reagan is the most convenient airport.  You can easily take a taxi five miles from the Airport to any of the hotels.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">Baltimore Washington International Airport</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/i6LRWe8mCY72">Google Maps</a></div>
+						<div class="col-xs-6 whitetext"><p>BWI is also a convenient airport, but will probably require a rental car.  The drive will take approximately 50 minutes depending on traffic.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">Dulles International Airport</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/KoU4LUwNhpN2">Google Maps</a></div>
+						<div class="col-xs-6 whitetext"><p>Dulles is just as convenient as BWI.  It will also require a rental car.  The drive will take approximately 50 minutes depending on traffic.</p></div>
 					</div>
 				</div>
 			</div>
@@ -709,7 +709,7 @@
 					<div class="row">
 						<div class="col-xs-3 righttext">Amtrak Union Station</div>
 						<div class="col-xs-3 centered"><a href="https://www.amtrak.com/servlet/ContentServer?pagename=am/am2Station/Station_Page&code=WAS">Amtrack Website</a></div>
-						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-6 whitetext"><p>After arriving at Union Station, take a taxi two miles to The Old Post Office Pavilion</p></div>
 					</div>
 				</div>
 			</div>
@@ -719,29 +719,24 @@
 				</div>
 				<div class="container-fluid fullsection">
 					<div class="row">
-						<div class="col-xs-3 righttext">From BWI and I-95 from the North</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-3 righttext">From BWI and I-95 from the North<br/><i>35 Miles</i></div>
+						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/TJAMbjuPw6w">Google Maps from BWI</a></div>
+						<div class="col-xs-6 whitetext"><p>Take I-95 S, I-495 S, Baltimore-Washington Pkwy and State Hwy 295 to Maine Ave SW in Washington. Take the Maine Ave exit from I-395 S. Take 15th St NW to Pennsylvania Ave NW.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">From Pittsburgh and I-270 from the North</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/hHFhzNjEEzn">Google Maps from Pittsburgh</a></div>
+						<div class="col-xs-6 whitetext"><p>Take I-270 S and George Washington Memorial Pkwy to 12th St Expy in Washington. Take the 12th St exit from I-395 N. Continue on 12th St Expy. Drive to Pennsylvania Ave NW.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">From Dulles</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-3 righttext">From Dulles International Airport<br/><i>28 Miles</i></div>
+						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/76QdYjJnoED2">Google Maps from Dulles Airport</a></div>
+						<div class="col-xs-6 whitetext"><p>Continue on Dulles Access Rd. Take I-66 E to US-50 E/Constitution Ave NW in Washington. Exit from I-66 E. Continue on US-50 E/Constitution Ave NW. Drive to Pennsylvania Ave NW.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">I-95 from the South</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
-					</div>
-					<div class="row">
-						<div class="col-xs-3 righttext">From Reagan</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-3 righttext">From Ronald Reagan Washington National Airport<br/><i>5 Miles</i></div>
+						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/GCyoYxQQz3E2">Google Maps from Reagan Airport</a></div>
+						<div class="col-xs-6 whitetext"><p>Get on I-395 N from George Washington Memorial Pkwy. Continue on I-395 N. Take 12th St Expy to 12th St NW. Continue on 12th St NW. Drive to Pennsylvania Ave NW.</p></div>
 					</div>
 				</div>
 			</div>
