first commit brand new style separate pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -39,6 +39,13 @@
     			$(".navbar-collapse").collapse('hide');
 			});
 
+	      	function showSlides() {
+	      		$("#headerwrap").css('background', 'url(assets/img/background.png)');
+
+	      	}
+
+	      	setTimeout(showSlides, 15000); // Change image every 15 seconds
+
 	    });
 
 
@@ -101,27 +108,85 @@
 			<div class="clear"></div>
 		</div>
 	</div>-->
-	<div id="introwrap">
-		<div class="container-fluid">
-			<div class="row centered">
-				<div class="col-lg-12">
-					<h1>Allie & Matt</h1>
-					<h3>11.4.2017</h3>
-				</div><!--/.col-lg-12 -->
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/.#headerwrap -->
-	<div id="headerwrap">
-		<div class="container-fluid">
-			<div class="row centered">
-				<div class="col-lg-12">
-
-				</div><!--/.col-lg-12 -->
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/.#headerwrap -->
 	
+	<section id="ourstory" name="ourstory"></section>
+	<!--our story-->
+	<div class="container-fluid desc bottom-edge-shadow">
+	<div class="row">
+		<div class="col-lg-11">
+			<h1>Our Story</h1><hr class="whitebackground">
+		</div>
+	</div>
+	<div class="fullsection">
+		<div class="row">
+			<div class="col-lg-12">
+					<p><t>The first time you met...</t>
+					</p>
+					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
+					</p>
+					<p>Matt: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
+					</p>
+			</div>
+		</div><!--/.row -->
+		<div class="row">
 
+				<div class="col-lg-12">
+					<p><t>When you knew they were the one...</t>
+					</p>
+					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
+					</p>
+					<p>Matt: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
+					</p>
+				</div>
+		</div><!--/.row -->
+		<div class="row">
+
+				<div class="col-lg-12">
+					<p><t>The proposal...</t>
+					</p>
+					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
+					</p>
+					<p>Matt: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
+					</p>
+				</div>
+		</div><!--/.row -->
+	</div>
+	</div>
+	
+<!--end our story -->
+
+
+	<section id="contact" name="contact"></section>
+	<!--FOOTER DESCRIPTION -->
+	<div id="footwrap">
+		<div class="container-fluid">
+			<div class="row">
+			
+				<div class="col-lg-2 col-lg-offset-1">
+					<h5>CONTACT</h5>
+				</div>
+				<div class="col-lg-6">
+					<p><t>Email</t><br/>
+						info@alliemethermatt.com <br/>
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>SOCIAL LINKS</sm></p>
+					<p>
+						<a href="https://twitter.com/search?f=tweets&q=%23alliemethermatt&src=typd"><i class="icon-twitter"></i> Twitter</a><br/>
+						<a href="https://www.instagram.com/explore/tags/alliemethermatt/"><i class="icon-instagram"></i> Instagram</a>
+					</p>
+				</div>
+			</div><!--/.row -->
+		</div><!--/.container -->
+	</div><!--/ #footer -->
+	
+	<div id="c">
+		<div class="container-fluid">
+			<p>stuff goes here</p>
+		
+		</div>
+	</div>
 </div>
 
     <!-- Bootstrap core JavaScript
