--- a/registry.html
+++ b/registry.html
@@ -39,6 +39,13 @@
     			$(".navbar-collapse").collapse('hide');
 			});
 
+	      	function showSlides() {
+	      		$("#headerwrap").css('background', 'url(assets/img/background.png)');
+
+	      	}
+
+	      	setTimeout(showSlides, 15000); // Change image every 15 seconds
+
 	    });
 
 
@@ -101,27 +108,66 @@
 			<div class="clear"></div>
 		</div>
 	</div>-->
-	<div id="introwrap">
-		<div class="container-fluid">
-			<div class="row centered">
-				<div class="col-lg-12">
-					<h1>Allie & Matt</h1>
-					<h3>11.4.2017</h3>
-				</div><!--/.col-lg-12 -->
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/.#headerwrap -->
-	<div id="headerwrap">
-		<div class="container-fluid">
-			<div class="row centered">
-				<div class="col-lg-12">
-
-				</div><!--/.col-lg-12 -->
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/.#headerwrap -->
 	
+	
+	<section id="registry" name="registry"></section>
+	<div id="registrywrap" class="bottom-edge-shadow">
+		<div class="row">
+			<div class="col-lg-11 col-lg-offset-1">
+				<h1>Registry</h1><hr class="whitebackground">
+			</div>
+		</div>
+		<div class="container-fluid fullsection">
+			<div class="row">
+				<div class="col-sm-4 photodiv">
+					<br/>
+					<p><a href="#"><img class="imgcell imagedropshadow" src="assets/img/annsandra.png"/></a></p>
+				</div>
+				<div class="col-sm-4 photodiv">
+					<br/>
+					<p><a href="#"><img class="imgcell imagedropshadow" src="assets/img/williamsonoma.png"/></a></p>
+				</div>
+				<div class="col-sm-4 photodiv">
+					<br/>
+					<p><a href="#"><img class="imgcell imagedropshadow" src="assets/img/potterybarn.jpg"/></a></p>
+				</div>
+			</div>
+		</div>
+	</div>
 
+
+
+	<section id="contact" name="contact"></section>
+	<!--FOOTER DESCRIPTION -->
+	<div id="footwrap">
+		<div class="container-fluid">
+			<div class="row">
+			
+				<div class="col-lg-2 col-lg-offset-1">
+					<h5>CONTACT</h5>
+				</div>
+				<div class="col-lg-6">
+					<p><t>Email</t><br/>
+						info@alliemethermatt.com <br/>
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>SOCIAL LINKS</sm></p>
+					<p>
+						<a href="https://twitter.com/search?f=tweets&q=%23alliemethermatt&src=typd"><i class="icon-twitter"></i> Twitter</a><br/>
+						<a href="https://www.instagram.com/explore/tags/alliemethermatt/"><i class="icon-instagram"></i> Instagram</a>
+					</p>
+				</div>
+			</div><!--/.row -->
+		</div><!--/.container -->
+	</div><!--/ #footer -->
+	
+	<div id="c">
+		<div class="container-fluid">
+			<p>stuff goes here</p>
+		
+		</div>
+	</div>
 </div>
 
     <!-- Bootstrap core JavaScript
