making changes to new format

--- a/aboutus.html
+++ b/aboutus.html
@@ -14,6 +14,8 @@
     <link href='http://fonts.googleapis.com/css?family=Fira Sans:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Arimo:400,300,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Pinyon+Script:400,300,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -111,7 +113,7 @@
 	
 	<section id="ourstory" name="ourstory"></section>
 	<!--our story-->
-	<div class="container-fluid desc bottom-edge-shadow">
+	<div class="container-fluid desc bottom-edge-shadow topsection">
 	<div class="row">
 		<div class="col-lg-11">
 			<h1>Our Story</h1><hr class="whitebackground">
@@ -155,38 +157,102 @@
 	
 <!--end our story -->
 
-
-	<section id="contact" name="contact"></section>
-	<!--FOOTER DESCRIPTION -->
-	<div id="footwrap">
-		<div class="container-fluid">
-			<div class="row">
-			
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>CONTACT</h5>
-				</div>
-				<div class="col-lg-6">
-					<p><t>Email</t><br/>
-						info@alliemethermatt.com <br/>
-					</p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>SOCIAL LINKS</sm></p>
-					<p>
-						<a href="https://twitter.com/search?f=tweets&q=%23alliemethermatt&src=typd"><i class="icon-twitter"></i> Twitter</a><br/>
-						<a href="https://www.instagram.com/explore/tags/alliemethermatt/"><i class="icon-instagram"></i> Instagram</a>
-					</p>
-				</div>
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/ #footer -->
+<!--Wedding party -->
 	
-	<div id="c">
-		<div class="container-fluid">
-			<p>stuff goes here</p>
-		
+	<div id="weddingparty" class="top-edge-shadow">
+	<div class="container-fluid">	
+		<div class="row">
+			<div class="col-lg-11">
+				<h1>Wedding Party</h1><hr class="whitebackground">
+			</div>
 		</div>
 	</div>
+		<div class="container-fluid fullsection">
+			<div class="row">
+				<div class="col-xs-6 photodiv">
+					<h4>Jessi Friend</h4><h5>Maid of Honor</h5>
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imgcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-xs-6 photodiv">
+					<h4>Patrick Robertson</h4><h5>Best Man</h5>
+					<a href="#" id="patmodalbutton" data-toggle="modal" data-target="#patmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/pat_320x320.jpg"/></a>
+				</div>
+			</div>
+			<br/>
+			<div class="row">
+				<div class="col-xs-6 photodiv">
+					<h4>Alex Corbutt</h4><h5>Bridesmaid</h5>
+					<a href="#" id="alexmodalbutton" data-toggle="modal" data-target="#alexmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/alex_320x320.jpg"/></a>
+				</div>
+				<div class="col-xs-6 photodiv">
+					<h4>Ben Levine</h4><h5>Groomsman</h5>
+					<a href="#" id="benmodalbutton" data-toggle="modal" data-target="#benmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/></a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 photodiv">
+					<h4>Danielle Caroll</h4><h5>Bridesmaid</h5>
+					<a href="#" id="daniellemodalbutton" data-toggle="modal" data-target="#daniellemodal"><img class="imgcell imagedropshadow" src="assets/img/photos/danielle_320x320.jpg"/></a>
+				</div>
+				<div class="col-xs-6 photodiv">
+					<h4>Chadd Hippensteel</h4><h5>Groomsman</h5>
+					<a href="#" id="chaddmodalbutton" data-toggle="modal" data-target="#chaddmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/></a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 photodiv">
+					<h4>Danielle Mathewson</h4><h5>Bridesmaid</h5>
+					<a href="#" id="mathewsonmodalbutton" data-toggle="modal" data-target="#mathewsonmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/mathewson_320x320.jpg"/></a>
+				</div>
+				<div class="col-xs-6 photodiv">
+					<h4>Justin Bale</h4><h5>Groomsman</h5>
+					<a href="#" id="justinmodalbutton" data-toggle="modal" data-target="#justinmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/justin_320x320.jpg"/></a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 photodiv">
+					<h4>Julia Guimond</h4><h5>Bridesmaid</h5>
+					<a href="#" id="juilamodalbutton" data-toggle="modal" data-target="#juliamodal"><img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/></a>
+				</div>
+				<div class="col-xs-6 photodiv">
+					<h4>Matt Daniels</h4><h5>Groomsman</h5>
+					<a href="#" id="danielsmodalbutton" data-toggle="modal" data-target="#danielsmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/daniels_320x320.jpg"/></a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 photodiv">
+					<h4>Julianne Webb</h4><h5>Bridesmaid</h5>
+					<a href="#" id="webbmodalbutton" data-toggle="modal" data-target="#webbmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/webb_320x320.jpg"/></a>
+				</div>
+				<div class="col-xs-6 photodiv">
+					<h4>Matt Davis</h4><h5>Groomsman</h5>
+					<a href="#" id="davismodalbutton" data-toggle="modal" data-target="#davismodal"><img class="imgcell imagedropshadow" src="assets/img/photos/davis_320x320.jpg"/></a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 photodiv">
+					<h4>Layne Starkey</h4><h5>Bridesmaid</h5>
+					<a href="#" id="laynemodalbutton" data-toggle="modal" data-target="#laynemodal"><img class="imgcell imagedropshadow" src="assets/img/photos/layne_320x320.jpg"/></a>
+				</div>
+				<div class="col-xs-6 photodiv">
+					<h4>Tim Frend</h4><h5>Groomsman</h5>
+					<a href="#" id="timfmodalbutton" data-toggle="modal" data-target="#timfmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/timf_320x320.jpg"/></a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 photodiv">
+					<h4>Meghan Kane</h4><h5>Bridesmaid</h5>
+					<a href="#" id="meghanmodalbutton" data-toggle="modal" data-target="#meghanmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/meghan_320x320.jpg"/></a>
+				</div>
+				<div class="col-xs-6 photodiv">
+					<h4>Tim Malloy</h4><h5>Groomsman</h5>
+					<a href="#" id="malloymodalbutton" data-toggle="modal" data-target="#malloymodal"><img class="imgcell imagedropshadow" src="assets/img/photos/malloy_320x320.jpg"/></a>
+				</div>
+			</div>
+
+		</div><!--/.container -->
+	</div><!--/ #skillswrap -->
+	
 </div>
 
     <!-- Bootstrap core JavaScript
