--- a/photos.html
+++ b/photos.html
@@ -14,6 +14,7 @@
     <link href='http://fonts.googleapis.com/css?family=Fira Sans:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Arimo:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Pinyon+Script:400,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -112,49 +113,73 @@
 
 
 <section id="travel" name="travel"></section>
-	<div id="travelwrap" class="bottom-edge-shadow">
+	<div id="travelwrap" class="">
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
-				<h1>photos</h1><hr class="bluebackground">
+				<h1>Photos</h1><hr class="whitebackground">
 			</div>
 		</div>
 		<div class="container-fluid">
-			photos here
+			<div class="row">
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+			</div><br />
+			<div class="row">
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+			</div><br />
+			<div class="row">
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+			</div><br />
+			<div class="row">
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+				</div>
+			</div>
 		</div>
 	</div>
 	
 
-	<section id="contact" name="contact"></section>
-	<!--FOOTER DESCRIPTION -->
-	<div id="footwrap">
-		<div class="container-fluid">
-			<div class="row">
-			
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>CONTACT</h5>
-				</div>
-				<div class="col-lg-6">
-					<p><t>Email</t><br/>
-						info@alliemethermatt.com <br/>
-					</p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>SOCIAL LINKS</sm></p>
-					<p>
-						<a href="https://twitter.com/search?f=tweets&q=%23alliemethermatt&src=typd"><i class="icon-twitter"></i> Twitter</a><br/>
-						<a href="https://www.instagram.com/explore/tags/alliemethermatt/"><i class="icon-instagram"></i> Instagram</a>
-					</p>
-				</div>
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/ #footer -->
-	
-	<div id="c">
-		<div class="container-fluid">
-			<p>stuff goes here</p>
-		
-		</div>
-	</div>
 </div>
 
     <!-- Bootstrap core JavaScript
