--- a/registry.html
+++ b/registry.html
@@ -14,6 +14,8 @@
     <link href='http://fonts.googleapis.com/css?family=Fira Sans:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Arimo:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Pinyon+Script:400,300,700' rel='stylesheet' type='text/css'>
+
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -111,7 +113,7 @@
 	
 	
 	<section id="registry" name="registry"></section>
-	<div id="registrywrap" class="bottom-edge-shadow">
+	<div id="registrywrap" class="bottom-edge-shadow topsection">
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
 				<h1>Registry</h1><hr class="whitebackground">
@@ -137,37 +139,6 @@
 
 
 
-	<section id="contact" name="contact"></section>
-	<!--FOOTER DESCRIPTION -->
-	<div id="footwrap">
-		<div class="container-fluid">
-			<div class="row">
-			
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>CONTACT</h5>
-				</div>
-				<div class="col-lg-6">
-					<p><t>Email</t><br/>
-						info@alliemethermatt.com <br/>
-					</p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>SOCIAL LINKS</sm></p>
-					<p>
-						<a href="https://twitter.com/search?f=tweets&q=%23alliemethermatt&src=typd"><i class="icon-twitter"></i> Twitter</a><br/>
-						<a href="https://www.instagram.com/explore/tags/alliemethermatt/"><i class="icon-instagram"></i> Instagram</a>
-					</p>
-				</div>
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/ #footer -->
-	
-	<div id="c">
-		<div class="container-fluid">
-			<p>stuff goes here</p>
-		
-		</div>
-	</div>
 </div>
 
     <!-- Bootstrap core JavaScript
