--- a/travelaccomodations.html
+++ b/travelaccomodations.html
@@ -14,6 +14,8 @@
     <link href='http://fonts.googleapis.com/css?family=Fira Sans:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Arimo:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Pinyon+Script:400,300,700' rel='stylesheet' type='text/css'>
+     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -112,15 +114,15 @@
 	
 
 <section id="travel" name="travel"></section>
-	<div id="travelwrap" class="bottom-edge-shadow">
+	<div id="travelwrap" class="bottom-edge-shadow topsection">
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
-				<h1>Travel</h1><hr class="bluebackground">
+				<h1>Travel</h1><hr class="whitebackground">
 			</div>
 		</div>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1">
+				<div class="col-lg-11 col-lg-offset-1 hotelrow">
 					<h3>Planes</h3>
 				</div>
 				<div class="container-fluid">
@@ -142,7 +144,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1">
+				<div class="col-lg-11 col-lg-offset-1 hotelrow">
 					<h3>Trains</h3>
 				</div>
 				<div class="container-fluid">
@@ -153,8 +155,9 @@
 					</div>
 				</div>
 			</div>
+			<!--
 			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1">
+				<div class="col-lg-11 col-lg-offset-1 hotelrow">
 					<h3>Automobiles</h3>
 				</div>
 				<div class="container-fluid fullsection">
@@ -178,43 +181,105 @@
 						<div class="col-xs-3 centered"><a href="https://goo.gl/maps/GCyoYxQQz3E2" type="button" class="btn btn-calendar">Map from <br>Reagan Airport</a></div>
 						<div class="col-xs-6 whitetext"><p>Get on I-395 N from George Washington Memorial Pkwy. Continue on I-395 N. Take 12th St Expy to 12th St NW. Continue on 12th St NW. Drive to Pennsylvania Ave NW.</p></div>
 					</div>
+				</div>-->
+			</div>
+		</div>
+	</div>
+
+<section id="accommodations" name="accommodations"></section>
+	<div id="accommodationswrap" class="bottom-edge-shadow">
+		<div class="row">
+			<div class="col-lg-12">
+				<h1>Accomodations</h1><hr class="whitebackground">
+			</div>
+		</div>
+		<div class="container-fluid fullsection">
+			<div class="row">
+				<div id="mapholder" class="col-lg-12 centered">
+					<iframe id="locationmap" src="untitled.html"></iframe>
+			
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12 hotelrow">
+					<h3>Old Post Office Pavilion</h3>
+					<h5>1100 Pennsylvania Ave NW <br />Washington, DC 20004</h5>
+				</div>
+			</div>
+			<div class="row hotelbuttonrow">
+				<div class="col-xs-3">
+					<a href="tel:2026951100" type="button" class="btn btn-calendar">(202) 695-1100</a>
+				</div>
+				<div class="col-xs-3">	
+					<a href="https://www.trumphotels.com/washington-dc/luxury-washington-dc-hotels" type="button" class="btn btn-calendar">OPOP Website</a>
+				</div>
+				<div class="col-xs-3">	
+					<a href="https://goo.gl/maps/9pcMAGqPGiM2" type="button" class="btn btn-calendar">Google Maps</a>
+				</div>
+			</div>
+		    <div class="row">
+				<div class="col-xs-5 photodiv">
+					<img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/>
+				</div>
+				<div class="col-xs-7 whitetext">
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12 hotelrow">
+					<h3>Grand Hyatt Washington</h3>
+					<h5>1000 H St NW <br /> Washington, DC 20001</h5>
+				</div>
+			</div>
+			<div class="row hotelbuttonrow">
+				<div class="col-xs-3">
+					<a href="tel:2025821234" type="button" class="btn btn-calendar">(202) 582-1234</a>
+				</div>
+				<div class="col-xs-4">
+					<a href="https://washingtondc.grand.hyatt.com/en/hotel/home.html" type="button" class="btn btn-calendar">Grand Hyatt Website</a>
+				</div>
+				<div class="col-xs-2">
+					<a href="https://goo.gl/maps/HJKHyQ5C2Z92" type="button" class="btn btn-calendar">Google Maps</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-5 photodiv">
+					<img class="imgcell imagedropshadow" src="assets/img/photos/hyatt_320x320.jpg"/>
+				</div>
+				<div class="col-xs-7 whitetext">
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				</div>
+			</div>
+		
+			<div class="row">
+				<div class="col-lg-12 hotelrow">
+					<h3>JW Marriott Washington, DC</h3>
+					<h5>1331 Pennsylvania Ave NW <br /> Washington, DC 20004</h5>
+				</div>
+			</div>
+			<div class="row hotelbuttonrow">
+				<div class="col-xs-3">
+					<a href="tel:2023932000" type="button" class="btn btn-calendar">(202) 393-2000</a>
+				</div>
+				<div class="col-xs-4">
+					<a href="http://www.marriott.com/hotels/travel/wasjw-jw-marriott-washington-dc/" type="button" class="btn btn-calendar">JW Marriott Website</a>
+				</div>
+				<div class="col-xs-2">
+					<a href="https://goo.gl/maps/kKTfVRupxHP2" type="button" class="btn btn-calendar">Google Maps</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-5 photodiv">
+					<img class="imgcell imagedropshadow" src="assets/img/photos/marriott_320x320.jpg"/>
+				</div>
+				<div class="col-xs-7 whitetext">
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>		
 				</div>
 			</div>
 		</div>
 	</div>
 
 
-	<section id="contact" name="contact"></section>
-	<!--FOOTER DESCRIPTION -->
-	<div id="footwrap">
-		<div class="container-fluid">
-			<div class="row">
-			
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>CONTACT</h5>
-				</div>
-				<div class="col-lg-6">
-					<p><t>Email</t><br/>
-						info@alliemethermatt.com <br/>
-					</p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>SOCIAL LINKS</sm></p>
-					<p>
-						<a href="https://twitter.com/search?f=tweets&q=%23alliemethermatt&src=typd"><i class="icon-twitter"></i> Twitter</a><br/>
-						<a href="https://www.instagram.com/explore/tags/alliemethermatt/"><i class="icon-instagram"></i> Instagram</a>
-					</p>
-				</div>
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/ #footer -->
-	
-	<div id="c">
-		<div class="container-fluid">
-			<p>stuff goes here</p>
-		
-		</div>
-	</div>
 </div>
 
     <!-- Bootstrap core JavaScript
