--- a/wedding.html
+++ b/wedding.html
@@ -14,6 +14,7 @@
     <link href='http://fonts.googleapis.com/css?family=Fira Sans:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Arimo:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Pinyon+Script:400,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -110,10 +111,10 @@
 	</div>-->
 	
 <section id="scheduleofevents" name="scheduleofevents"></section>
-	<div id="scheduleofeventswrap" class="top-edge-shadow">
+	<div id="scheduleofeventswrap" class="top-edge-shadow topsection">
 		<div class="row">
 			<div class="col-lg-7 col-lg-offset-1">
-				<h1>Schedule of Events</h1><hr class="bluebackground">
+				<h1>Schedule of Events</h1><hr class="whitebackground">
 			</div>
 			<div class="col-lg-4">
 				<a href="assets/other/alliemattwedding.ics" type="button" class="btn btn-calendar"><b>Add Events To Calendar</b> &nbsp; <i class="icon-calendar"></i></a>
@@ -189,106 +190,9 @@
 			</div>
 		</div>
 	</div>
-	<section id="accommodations" name="accommodations"></section>
-	<div id="accommodationswrap" class="bottom-edge-shadow">
-		<div class="row">
-			<div class="col-lg-12">
-				<h1>Accomodations</h1><hr class="whitebackground">
-			</div>
-		</div>
-		<div class="container-fluid fullsection">
-			<div class="row">
-				<div id="mapholder" class="col-lg-12 centered">
-					<iframe id="locationmap" src="untitled.html"></iframe>
-			
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12">
-					<h3>Old Post Office Pavilion</h3>
-					<h5>1100 Pennsylvania Ave NW, Washington DC 20004</h5>
-				</div>
-			</div>
-		    <div class="row">
-				<div class="col-xs-5 photodiv">
-					<img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/>
-				</div>
-				<div class="col-lg-7 whitetext">
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-					<a href="tel:2026951100" type="button" class="btn btn-calendar">(202) 695-1100</a> <br/><br/>
-					<a href="https://www.trumphotels.com/washington-dc/luxury-washington-dc-hotels" type="button" class="btn btn-calendar">OPOP Website</a> <br/><br/>
-					<a href="https://goo.gl/maps/9pcMAGqPGiM2" type="button" class="btn btn-calendar">Google Maps</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12">
-					<h3>Grand Hyatt Washington</h3>
-					<h5>1000 H St NW, Washington DC 20001</h5>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-5 photodiv">
-					<img class="imgcell imagedropshadow" src="assets/img/photos/hyatt_320x320.jpg"/>
-				</div>
-				<div class="col-lg-7 whitetext">
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-					<a href="tel:2025821234" type="button" class="btn btn-calendar">(202) 582-1234</a><br/><br/>
-					<a href="https://washingtondc.grand.hyatt.com/en/hotel/home.html" type="button" class="btn btn-calendar">Grand Hyatt Website</a> <br/><br/>
-					<a href="https://goo.gl/maps/HJKHyQ5C2Z92" type="button" class="btn btn-calendar">Google Maps</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12">
-					<h3>JW Marriott Washington, DC</h3>
-					<h5>1331 Pennsylvania Ave NW, Washington, DC 20004</h5>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-5 photodiv">
-					<img class="imgcell imagedropshadow" src="assets/img/photos/marriott_320x320.jpg"/>
-				</div>
-				<div class="col-lg-7 whitetext">
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-					<a href="tel:2023932000" type="button" class="btn btn-calendar">(202) 393-2000</a><br/><br/>
-					<a href="http://www.marriott.com/hotels/travel/wasjw-jw-marriott-washington-dc/" type="button" class="btn btn-calendar">JW Marriott Website</a> <br/><br/>
-					<a href="https://goo.gl/maps/kKTfVRupxHP2" type="button" class="btn btn-calendar">Google Maps</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
 	
-	<section id="contact" name="contact"></section>
-	<!--FOOTER DESCRIPTION -->
-	<div id="footwrap">
-		<div class="container-fluid">
-			<div class="row">
-			
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>CONTACT</h5>
-				</div>
-				<div class="col-lg-6">
-					<p><t>Email</t><br/>
-						info@alliemethermatt.com <br/>
-					</p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>SOCIAL LINKS</sm></p>
-					<p>
-						<a href="https://twitter.com/search?f=tweets&q=%23alliemethermatt&src=typd"><i class="icon-twitter"></i> Twitter</a><br/>
-						<a href="https://www.instagram.com/explore/tags/alliemethermatt/"><i class="icon-instagram"></i> Instagram</a>
-					</p>
-				</div>
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/ #footer -->
 	
-	<div id="c">
-		<div class="container-fluid">
-			<p>stuff goes here</p>
-		
-		</div>
-	</div>
+	
 </div>
 
     <!-- Bootstrap core JavaScript
