--- a/aboutus.html
+++ b/aboutus.html
@@ -162,93 +162,134 @@
 	<div id="weddingparty" class="top-edge-shadow">
 	<div class="container-fluid">	
 		<div class="row">
-			<div class="col-lg-11">
+			<div class="col-lg-12">
 				<h1>Wedding Party</h1><hr class="whitebackground">
 			</div>
 		</div>
 	</div>
-		<div class="container-fluid fullsection">
+		<div class="container fullsection">
 			<div class="row">
-				<div class="col-xs-6 photodiv">
-					<h4>Jessi Friend</h4><h5>Maid of Honor</h5>
+				<div class="col-xl-1 col-centered">
+					<h1>Bridesmaids</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered photodiv">
 					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imgcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-xs-6 photodiv">
-					<h4>Patrick Robertson</h4><h5>Best Man</h5>
-					<a href="#" id="patmodalbutton" data-toggle="modal" data-target="#patmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/pat_320x320.jpg"/></a>
+					<h4>Jessi Friend</h4><h5>Maid of Honor</h5>
+					<br />
 				</div>
 			</div>
-			<br/>
 			<div class="row">
-				<div class="col-xs-6 photodiv">
-					<h4>Alex Corbutt</h4><h5>Bridesmaid</h5>
+				<div class="col-xl-1 col-centered photodiv">
 					<a href="#" id="alexmodalbutton" data-toggle="modal" data-target="#alexmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/alex_320x320.jpg"/></a>
-				</div>
-				<div class="col-xs-6 photodiv">
-					<h4>Ben Levine</h4><h5>Groomsman</h5>
-					<a href="#" id="benmodalbutton" data-toggle="modal" data-target="#benmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/></a>
+					<h4>Alex Corbutt</h4><h5>Bridesmaid</h5>
+					<br />
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-6 photodiv">
-					<h4>Danielle Caroll</h4><h5>Bridesmaid</h5>
+				<div class="col-xl-1 col-centered photodiv">
 					<a href="#" id="daniellemodalbutton" data-toggle="modal" data-target="#daniellemodal"><img class="imgcell imagedropshadow" src="assets/img/photos/danielle_320x320.jpg"/></a>
-				</div>
-				<div class="col-xs-6 photodiv">
-					<h4>Chadd Hippensteel</h4><h5>Groomsman</h5>
-					<a href="#" id="chaddmodalbutton" data-toggle="modal" data-target="#chaddmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/></a>
+					<h4>Danielle Caroll</h4><h5>Bridesmaid</h5>
+					<br />
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-6 photodiv">
-					<h4>Danielle Mathewson</h4><h5>Bridesmaid</h5>
+				<div class="col-xl-1 col-centered photodiv">
 					<a href="#" id="mathewsonmodalbutton" data-toggle="modal" data-target="#mathewsonmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/mathewson_320x320.jpg"/></a>
-				</div>
-				<div class="col-xs-6 photodiv">
-					<h4>Justin Bale</h4><h5>Groomsman</h5>
-					<a href="#" id="justinmodalbutton" data-toggle="modal" data-target="#justinmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/justin_320x320.jpg"/></a>
+					<h4>Danielle Mathewson</h4><h5>Bridesmaid</h5>
+					<br />
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-6 photodiv">
-					<h4>Julia Guimond</h4><h5>Bridesmaid</h5>
+				<div class="col-xl-1 col-centered photodiv">
 					<a href="#" id="juilamodalbutton" data-toggle="modal" data-target="#juliamodal"><img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/></a>
-				</div>
-				<div class="col-xs-6 photodiv">
-					<h4>Matt Daniels</h4><h5>Groomsman</h5>
-					<a href="#" id="danielsmodalbutton" data-toggle="modal" data-target="#danielsmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/daniels_320x320.jpg"/></a>
+					<h4>Julia Guimond</h4><h5>Bridesmaid</h5>
+					<br />
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-6 photodiv">
-					<h4>Julianne Webb</h4><h5>Bridesmaid</h5>
+				<div class="col-xl-1 col-centered photodiv">
 					<a href="#" id="webbmodalbutton" data-toggle="modal" data-target="#webbmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/webb_320x320.jpg"/></a>
-				</div>
-				<div class="col-xs-6 photodiv">
-					<h4>Matt Davis</h4><h5>Groomsman</h5>
-					<a href="#" id="davismodalbutton" data-toggle="modal" data-target="#davismodal"><img class="imgcell imagedropshadow" src="assets/img/photos/davis_320x320.jpg"/></a>
+					<h4>Julianne Webb</h4><h5>Bridesmaid</h5>
+					<br />
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-6 photodiv">
-					<h4>Layne Starkey</h4><h5>Bridesmaid</h5>
+				<div class="col-xl-1 col-centered photodiv">
 					<a href="#" id="laynemodalbutton" data-toggle="modal" data-target="#laynemodal"><img class="imgcell imagedropshadow" src="assets/img/photos/layne_320x320.jpg"/></a>
-				</div>
-				<div class="col-xs-6 photodiv">
-					<h4>Tim Frend</h4><h5>Groomsman</h5>
-					<a href="#" id="timfmodalbutton" data-toggle="modal" data-target="#timfmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/timf_320x320.jpg"/></a>
+					<h4>Layne Starkey</h4><h5>Bridesmaid</h5>
+					<br />
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-6 photodiv">
-					<h4>Meghan Kane</h4><h5>Bridesmaid</h5>
+				<div class="col-xl-1 col-centered photodiv">
 					<a href="#" id="meghanmodalbutton" data-toggle="modal" data-target="#meghanmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/meghan_320x320.jpg"/></a>
-				</div>
-				<div class="col-xs-6 photodiv">
-					<h4>Tim Malloy</h4><h5>Groomsman</h5>
-					<a href="#" id="malloymodalbutton" data-toggle="modal" data-target="#malloymodal"><img class="imgcell imagedropshadow" src="assets/img/photos/malloy_320x320.jpg"/></a>
+					<h4>Meghan Kane</h4><h5>Bridesmaid</h5>
+					<br />
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered photodiv">
+					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imgcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
+					<h4>Jessi Friend</h4><h5>Maid of Honor</h5>
+					<br />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered">
+					<h1>Groomsmen</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered photodiv">
+					<a href="#" id="patmodalbutton" data-toggle="modal" data-target="#patmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/pat_320x320.jpg"/></a>
+					<h4>Patrick Robertson</h4><h5>Best Man</h5>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered photodiv">
+					<a href="#" id="benmodalbutton" data-toggle="modal" data-target="#benmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/></a>
+					<h4>Ben Levine</h4><h5>Groomsman</h5>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered photodiv">
+					<a href="#" id="chaddmodalbutton" data-toggle="modal" data-target="#chaddmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/></a>
+					<h4>Chadd Hippensteel</h4><h5>Groomsman</h5>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered photodiv">
+					<a href="#" id="justinmodalbutton" data-toggle="modal" data-target="#justinmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/justin_320x320.jpg"/></a>
+					<h4>Justin Bale</h4><h5>Groomsman</h5>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered photodiv">
+					<a href="#" id="danielsmodalbutton" data-toggle="modal" data-target="#danielsmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/daniels_320x320.jpg"/></a>
+					<h4>Matt Daniels</h4><h5>Groomsman</h5>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered photodiv">
+					<a href="#" id="davismodalbutton" data-toggle="modal" data-target="#davismodal"><img class="imgcell imagedropshadow" src="assets/img/photos/davis_320x320.jpg"/></a>
+					<h4>Matt Davis</h4><h5>Groomsman</h5>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered photodiv">
+					<a href="#" id="timfmodalbutton" data-toggle="modal" data-target="#timfmodal"><img class="imgcell imagedropshadow" src="assets/img/photos/timf_320x320.jpg"/></a>
+					<h4>Tim Frend</h4><h5>Groomsman</h5>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered photodiv">
+					<a href="#" id="malloymodalbutton" data-toggle="modal" data-target="#malloymodal"><img class="imgcell imagedropshadow" src="assets/img/photos/malloy_320x320.jpg"/></a>
+					<h4>Tim Malloy</h4><h5>Groomsman</h5>
+				</div>
+			</div>
+			
 
 		</div><!--/.container -->
 	</div><!--/ #skillswrap -->
