--- a/photos.html
+++ b/photos.html
@@ -45,7 +45,14 @@
 
 	      	}
 
-	      	setTimeout(showSlides, 15000); // Change image every 15 seconds
+
+			$('.thumbnail').click(function(){
+			      $('.modal-body').empty();
+			  	var title = $(this).parent('a').attr("title");
+			  	$('.modal-title').html(title);
+			  	$($(this).parents('div').html()).appendTo('.modal-body');
+			  	$('#myModal').modal({show:true});
+			  });
 
 	    });
 
@@ -119,68 +126,39 @@
 				<h1>Photos</h1><hr class="whitebackground">
 			</div>
 		</div>
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-			</div><br />
-			<div class="row">
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-			</div><br />
-			<div class="row">
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-			</div><br />
-			<div class="row">
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" id="jessimodalbutton" data-toggle="modal" data-target="#jessimodal"><img class="imggalcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/></a>
-				</div>
-			</div>
-		</div>
-	</div>
-	
 
+<div class="container">
+  <div class="row">
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 1" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 2" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 3" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 4" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 5" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 6" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 8" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 9" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 10" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 11" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 12" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 13" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+   
+  </div>
 </div>
+
+
+<div tabindex="-1" class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+		<button class="close" type="button" data-dismiss="modal">×</button>
+	</div>
+	<div class="modal-body">
+		
+	</div>
+   </div>
+  </div>
+</div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
