Add new images for photos fix registry and play with about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -121,20 +121,15 @@
 	</div>
 	<div class="fullsection">
 		<div class="row">
-			<div class="col-lg-12">
-					<p><t>The first time you met...</t>
-					</p>
-					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
-					</p>
-					<p>Matt: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
-					</p>
+			<div class="col-md-7">
+				<p><h4>The first time you met...</h4></p>
 			</div>
-		</div><!--/.row -->
+		</div>
 		<div class="row">
-
-				<div class="col-lg-12">
-					<p><t>When you knew they were the one...</t>
-					</p>
+				<div class="col-md-2">
+					<img class="imgcell aboutimagedropshadow" src="assets/img/photos/am18.JPG">
+				</div>
+				<div class="col-md-9">
 					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
 					</p>
 					<p>Matt: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
@@ -142,10 +137,31 @@
 				</div>
 		</div><!--/.row -->
 		<div class="row">
-
-				<div class="col-lg-12">
-					<p><t>The proposal...</t>
+			<div class="col-md-7">
+				<p><h4>When you knew they were the one...</h4></p>
+			</div>
+		</div>
+		<div class="row">
+				<div class="col-md-2">
+					<img class="imgcell aboutimagedropshadow" src="assets/img/photos/am4.JPG">
+				</div>
+				<div class="col-md-9">
+					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
 					</p>
+					<p>Matt: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
+					</p>
+				</div>
+		</div><!--/.row -->
+		<div class="row">
+			<div class="col-md-7">
+				<p><h4>The Proposal...</h4></p>
+			</div>
+		</div>
+		<div class="row">
+				<div class="col-md-2">
+					<img class="imgcell aboutimagedropshadow" src="assets/img/photos/am6.JPG">
+				</div>
+				<div class="col-md-9">
 					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
 					</p>
 					<p>Matt: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
