--- a/photos.html
+++ b/photos.html
@@ -129,18 +129,29 @@
 
 <div class="container">
   <div class="row">
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 1" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 2" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 3" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 4" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 5" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 6" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 8" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 9" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 10" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 11" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 12" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 13" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/jessi_320x320.jpg"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 1" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am1.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 2" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am2.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 3" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am3.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 4" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am4.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 5" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am5.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 6" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am6.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 7" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am7.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 8" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am8.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 9" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am9.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 10" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am10.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 11" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am11.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 12" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am12.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 13" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am13.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 14" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am14.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 15" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am15.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 16" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am16.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 17" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am17.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 18" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am18.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 19" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am19.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 20" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am20.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 21" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am21.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 22" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am22.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 23" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am23.JPG"></a></div>
    
   </div>
 </div>
