--- a/registry.html
+++ b/registry.html
@@ -85,60 +85,36 @@
       </div>
     </nav>
 
-
-<!--
-	<div id="section-topbar">
-		<div id="topbar-inner">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="dropdown">
-						<ul id="nav" class="nav">
-							<li class="menu-item"><a href="#welcomewrap" title="About"><i class="icon-user"></i></a></li>
-							<li class="menu-item"><a href="#ourstory" title="About"><i class="icon-user"></i></a></li>
-							<li class="menu-item"><a href="#weddingparty" title="About"><i class="icon-user"></i></a></li>
-							<li class="menu-item"><a href="#accommodations" title="About"><i class="icon-user"></i></a></li>
-							<li class="menu-item"><a href="#scheduleofevents" title="About"><i class="icon-user"></i></a></li>
-							<li class="menu-item"><a href="#registry" title="About"><i class="icon-user"></i></a></li>
-							<li class="menu-item"><a href="#whattodo" title="About"><i class="icon-user"></i></a></li>
-							<li class="menu-item"><a href="#travel" title="About"><i class="icon-user"></i></a></li>
-						</ul>
-					</div>
-
-					<div class="clear"></div>
-				</div>
-			</div>
-			<div class="clear"></div>
-		</div>
-	</div>-->
 	
 	
 	<section id="registry" name="registry"></section>
-	<div id="registrywrap" class="bottom-edge-shadow topsection">
+	<div id="registrywrap" class="">
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
 				<h1>Registry</h1><hr class="whitebackground">
 			</div>
 		</div>
-		<div class="container-fluid fullsection">
-			<div class="row">
-				<div class="col-sm-4 photodiv">
-					<br/>
-					<p><a href="#"><img class="imgcell imagedropshadow" src="assets/img/annsandra.png"/></a></p>
-				</div>
-				<div class="col-sm-4 photodiv">
-					<br/>
-					<p><a href="#"><img class="imgcell imagedropshadow" src="assets/img/williamsonoma.png"/></a></p>
-				</div>
-				<div class="col-sm-4 photodiv">
-					<br/>
-					<p><a href="#"><img class="imgcell imagedropshadow" src="assets/img/potterybarn.jpg"/></a></p>
-				</div>
+
+		<div class="container">
+		  <div class="row">
+		      <div class="centered">
+		      	<a href="https://annsandra.com/apps/giftregistry/registry/19688" target=""><img class="registryimg imagedropshadow" src="assets/img/annsandra.png"/></a>
+		      </div>
+		  </div>
+		  <br />
+		  <div class="row">
+		      <div class="centered">
+		      	<a href="https://secure.williams-sonoma.com/registry/9rx66gbx5x/registry-list.html"><img class="registryimg imagedropshadow" src="assets/img/williamsonoma.png"/></a>
+		      </div>
+		  </div>
+		  <br />
+		  <div class="row">
+		      <div class="centered">
+		      	<a href="https://secure.potterybarn.com/registry/j7l78dpkm6/registry-list.html"><img class="registryimg imagedropshadow" src="assets/img/potterybarn.jpg"/></a>
+		      </div>
 			</div>
+			<br />
 		</div>
-	</div>
-
-
-
 </div>
 
     <!-- Bootstrap core JavaScript
